--- a/WebContent/partials/message.html
+++ b/WebContent/partials/message.html
@@ -9,25 +9,8 @@
     </ul>
      <div class="clear"></div>
 </div>
-<div id="container">
-    <div id="banner">
-      <ul class="bjqs">
-        <li><img src="images/banner3.jpg" title="Enjoy your travel in La Paz"></li>
-        <li><img src="images/banner2.jpg" title="Best place to take a rest"></li>
-        <li><img src="images/banner1.jpg" title="Hostal Republica"></li>
-      </ul>
-    </div>
- </div>
- <script>
-    $(document).ready(function() {
-
-      $('#banner').bjqs({
-        'animation' : 'slide',
-        'width' : 920,
-        'height' : 450
-      });
-    });
-  </script>
-  <div class="content">
+   <div class="content">
+    <div class="alert alert-info">
     {{message}}
-</div>
+  </div>
+   </div>
