--- a/WebContent/partials/tpl/gestionEstadia.tpl.html
+++ b/WebContent/partials/tpl/gestionEstadia.tpl.html
@@ -135,6 +135,7 @@
   <div class="button" >
     <a href="" ng-click="open2()" >Ver Detalles</a>
       <a href="" ng-click="checkOut()" >Registrar Pago/Salida</a>
+      <a href="#/estadia/gestionOcupante/{{selectedCuentaOcu[0].id}}" ng-click="refreshCodeSelected()"  >Gestion Ocupantes</a>
   </div>
 </form>
 </div>
