--- a/WebContent/partials/pedidos.html
+++ b/WebContent/partials/pedidos.html
@@ -1,7 +1,7 @@
 <a href="#/login" style="display:block; margin-bottom:10px;color:white"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;LogOut</a>
 <div class="menu">
     <ul>
-      <li class="active"><a href="#/estadia">Reservas</a></li>
+      <li><a href="#/estadia">Reservas</a></li>
       <li><a href="#/estadia/gestion">Estadias</a></li>
       
     </ul>
@@ -10,7 +10,7 @@
 <div id="container">
  </div>
    <div class="content">
-    <div class="wrap" estadia-directive>call estadia template
+    <div class="wrap" pedido-directive>call Pedido template
     </div>
 </div>
 <div class="clear">&nbsp;</div>
