--- a/WebContent/partials/tpl/gestionEstadia.tpl.html
+++ b/WebContent/partials/tpl/gestionEstadia.tpl.html
@@ -49,7 +49,6 @@
           <label>Fecha Ingreso : </label><span>{{cuenta.fecha_ingreso}}</span><br/>
           <label>Fecha Salida : </label><input type="date" ng-change="evaluateNights()" ng-model="cuenta.fecha_salida" /><br/>
           <label>N° Noches : </label><span>{{cuenta.noches}}</span><br/>
-          <label>DATOS DE PAGO </label><br/>
           <label>Costo Estadia : </label><span>{{cuenta.costo_estadia}}</span><br/>
           <label>Costo Servicios Hostal: </label><span>{{cuenta.costo_serviciosExtra}}</span><br/>
           <label>Total : </label><span>{{cuenta.total}}</span><br/>
@@ -95,15 +94,11 @@
         <table class="table">
           <tr>
           <th>Habitacion</th>
-          <th>Ocupante</th>
-          <th>Doc. Identificacion</th>
           <th>Clase</th>
           <th>Tarifa</th>
           </tr>
           <tr ng-repeat=" row in habitacionesCuenta">
-            <td>{{row.codigo}}</td>
-            <td>{{row.nombre_ocupante}}</td>
-            <td>{{row.doc_identificacion}}</td>
+            <td>{{row.codigo}}</td>            
             <td>{{row.Clase}}</td>
             <td>{{row.tarifa}}</td>
           </tr>
@@ -135,7 +130,7 @@
   <div class="button" >
     <a href="" ng-click="open2()" >Ver Detalles</a>
       <a href="" ng-click="checkOut()" >Registrar Pago/Salida</a>
-      <a href="#/estadia/gestionOcupante/{{selectedCuentaOcu[0].id}}" ng-click="refreshCodeSelected()"  >Gestion Ocupantes</a>
+      <a href="#/estadia/gestionOcupante/{{selectedCuentaOcu[0].id}}" ng-click="refreshCodeSelected()"  >Gestion habitaciones</a>
   </div>
 </form>
 </div>
