agregado lista habitaciones
agregado lista habitaciones

--- a/WebContent/partials/reservaCliente.html
+++ b/WebContent/partials/reservaCliente.html
@@ -4,7 +4,8 @@
       <li class="active" ><a href="#/reservaCliente">Nueva Reserva</a></li>
       <li ><a href="#/estadia">Reservas</a></li>
       <li><a href="#/estadia/gestion">Estadias</a></li>
-
+      <li ><a href="#/habitacionesLista">Habitaciones</a></li>
+      <li ><a href="#/serviciosCliente">Servicios Cliente</a></li>
     </ul>
      <div class="clear"></div>
 </div>
