--- a/WebContent/partials/listaHabitaciones.html
+++ b/WebContent/partials/listaHabitaciones.html
@@ -2,18 +2,19 @@
 <div class="menu">
     <ul>
       <li ><a href="#/reservaCliente">Nueva Reserva</a></li>
-      <li class="active"><a href="#/estadia">Reservas</a></li>
-      <li><a href="#/estadia/gestion">Estadias</a></li>
-      <li ><a href="#/habitacionesLista">Habitaciones</a></li>
+      <li ><a href="#/estadia">Reservas</a></li>
+      <li ><a href="#/estadia/gestion">Estadias</a></li>
+      <li class="active"><a href="#/habitacionesLista">Habitaciones</a></li>
       <li ><a href="#/serviciosCliente">Servicios Cliente</a></li>
+
     </ul>
      <div class="clear"></div>
 </div>
 <div id="container">
  </div>
    <div class="content">
-    <div class="wrap" estadia-directive>call estadia template
-    </div>
+<div class="wrap" listahabitaciones-directive>call gestion estadia template
+</div>
 </div>
 <div class="clear">&nbsp;</div>
 <div class="clear">&nbsp;</div><div class="clear">&nbsp;</div><div class="clear">&nbsp;</div><div class="clear">&nbsp;</div><div class="clear">&nbsp;</div><div class="clear">&nbsp;</div>
