--- a/WebContent/partials/pedidos.html
+++ b/WebContent/partials/pedidos.html
@@ -1,9 +1,11 @@
 <a href="#/login" style="display:block; margin-bottom:10px;color:white"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;LogOut</a>
 <div class="menu">
     <ul>
+      <li ><a href="#/reservaCliente">Nueva Reserva</a></li>
       <li><a href="#/estadia">Reservas</a></li>
       <li><a href="#/estadia/gestion">Estadias</a></li>
-      
+      <li ><a href="#/habitacionesLista">Habitaciones</a></li>
+      <li ><a href="#/serviciosCliente">Servicios Cliente</a></li>
     </ul>
      <div class="clear"></div>
 </div>
