--- a/WebContent/partials/contact.html
+++ b/WebContent/partials/contact.html
@@ -8,7 +8,7 @@
     </ul>
      <div class="clear"></div>
   </div>
-<div id="container">
+<!--<div id="container">
    <div id="banner">
       <ul class="bjqs">
         <li><img src="images/banner3.jpg" title="Enjoy your travel in La Paz"></li>
@@ -16,7 +16,7 @@
         <li><img src="images/banner1.jpg" title="Hostal Republica"></li>
       </ul>
    </div>
- </div>
+ </div>-->
  <script>
     $(document).ready(function() {
 
